--- a/daemon/package.json
+++ b/daemon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codeboard-screencast-server",
+  "name": "rdp-daemon",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "internal-ip": "^6.2.0",
